Solved nav overlapping by adding mediaquery to body

--- a/css/style.css
+++ b/css/style.css
@@ -109,14 +109,6 @@
   padding: 0 5%;
 }
 
-.title {
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-
-.titleMinigame {
-  margin-top: 5%;
-}
 .logo{
   width:45%;
   height:45%;
